@@ -9,10 +9,13 @@ t/30_comment.t
 t/40_comma.t
 t/50_combined.t
 t/51_impliedhash.t
+t/60_prp.t
 t/99_regtest.t
 lib/JSON/Relaxed.pm
 lib/JSON/Relaxed/Parser.pm
 lib/JSON/Relaxed/ErrorCodes.pm
+scripts/pp.PL
+scripts/rrjson.pl
 t/regtests/site01.json
 t/regtests/site01.rjson
 t/regtests/site02.json
