@@ -3,6 +3,7 @@ Revision history for JSON-Relaxed
 0.093
 	- Use line/column for diagnostics.
 	- Add impied_outer_hash option.
+	- Add prp option for near-prp syntax.
 
 0.092	2024-05-06
 
